Feat: add get and list for event and launch
