# src/controllers/event/event.controller.ts
@@ -5,6 +5,25 @@ import { EventValidation } from "./event.validation";
 export default class LaunchController {
   static validation = EventValidation;
 
+  static async get(req: Request, res: Response, next: NextFunction) {
+    try {
+      const { eventId } = req.params;
+      const event = await EventService.get(parseInt(eventId));
+      res.json(event);
+    } catch (error) {
+      next(error);
+    }
+  }
+
+  static async list(_req: Request, res: Response, next: NextFunction) {
+    try {
+      const events = await EventService.list();
+      res.json(events);
+    } catch (error) {
+      next(error);
+    }
+  }
+
   static async create(req: Request, res: Response, next: NextFunction) {
     try {
       const { id, provider } = req.body;
